Changelog
=========


2.6.2 (unreleased)
------------------

- Fixes AdminUnits is_user_assigned query for oracle backends. [phgross]


2.6.1 (2017-03-24)
------------------

- Let sql testing builders commit the transaction. [jone]


2.6.0 (2016-10-18)
------------------

- Add method to filter users to service.
  [deiferni]

- Make sure extend_query_with_textfilter works also on Integer columns.
  [phgross]

- Made extend_query_with_textfilter case insensitive.
  [phgross]


2.5.0 (2016-05-02)
------------------

- Add assigned_groups method for the OGDSService.
  It returns all assigned groups for the given userid.
  [elioschmutz]


2.4.2 (2016-03-17)
------------------

- Handle missing OGDS user in AdminUnit.is_user_assigned().
  [lgraf]

- Add optimized method for checking if a user is assigned to an `AdminUnit`.
  [buchi]


2.4.1 (2016-03-15)
------------------

- Optimize performance of `assigned_users()` method of an `AdminUnit`.
  [buchi]


2.4.0 (2015-12-11)
------------------

- Move plone-group creation to opengever.core and refactor OrgUnitBuilder to have
  smaller methods that can be overwritten.
  [deiferni]

- Also create plone groups when creating ogds-groups for org-units.
  [deiferni]

- Add a method to query ogds groups from the service.
  [deiferni]


2.3.1 (2015-08-19)
------------------

- Add an `UnicodeCoercingText` TypeDecorator for the `Text` type that
  always returns unicode for values fetched from the DB. This allows
  us to have a guarantee to always receive unicode for `Text` types,
  even when using Oracle as the backend.
  The effect of this TypeDecorator should be the same as the cxOracle
  dialect option `coerce_to_unicode`, which unfortunately only affects
  `String` columns.
  [lgraf]


2.3.0 (2015-08-03)
------------------

- Add `active` column to `Group` model.
  (Corresponding upgrade-step is in opengever.ogds.base:default)
  [lgraf]

- Adapt imports for SQLAlchemy 1.x.
  [lgraf]


2.2.0 (2015-06-01)
------------------
